--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,426 +1,463 @@
 * {
-    margin: 0;
-    padding: 0;
-    direction: rtl;
-    text-align: right;
+  margin: 0;
+  padding: 0;
+  direction: rtl;
+  text-align: right;
 }
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 ul * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 body {
-    font-family: myfont;
-    text-align: justify;
-    position: relative;
-    transition: 0.5S cubic-bezier(.17, .84, .44, 1);
+  font-family: myfont;
+  text-align: justify;
+  position: relative;
+  transition: 0.5S cubic-bezier(.17, .84, .44, 1);
 }
 .font-small {
-    font-size: small;
+  font-size: small;
 }
 .overflow-hidden {
-    overflow: hidden;
+  overflow: hidden;
 }
 .opacity-5 {
-    opacity: .5;
+  opacity: .5;
 }
 .opacity {
-    opacity: 0;
+  opacity: 0;
 }
 .mt-6 {
-    margin-top: 3.5rem;
+  margin-top: 3.5rem;
 }
 .pr-8 {
-    padding-right: 4rem;
+  padding-right: 4rem;
 }
 .mr-10 {
-    margin-right: 6rem !important;
+  margin-right: 6rem !important;
 }
 .text-shadow {
-    text-shadow: -1px 2px 4px #000;
-    -webkit-transition: 0.15s;
-    transition: 0.15s;
-    font-family: myfont;
+  text-shadow: -1px 2px 4px #000;
+  -webkit-transition: 0.15s;
+  transition: 0.15s;
+  font-family: myfont;
 }
 .text-shadow:hover {
-    text-shadow: -1px 5px 7px #000000b3;
-    position: relative;
-    top: -1px;
+  text-shadow: -1px 5px 7px #000000b3;
+  position: relative;
+  top: -1px;
 }
 .bg-gray {
-    background-color: grey;
+  background-color: grey;
 }
 .h-2 {
-    height: 300px;
+  height: 300px;
 }
 /*///////////////////////////////////////////////////////////*/
 .will-change {
-    will-change: transform;
+  will-change: transform;
 }
 .a {
-    position: relative;
-    color: #fff;
-    text-decoration: none;
+  position: relative;
+  color: #fff;
+  text-decoration: none;
 }
 .a::after {
-    content: ' ';
-    display: block;
-    width: 100%;
-    height: .1em;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgb(86, 164, 155) 50%, rgba(255, 255, 255, 0) 100%);
-    background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(86, 164, 155) 50%, rgba(255, 255, 255, 0) 100%);
-    -webkit-transform: scaleX(0);
-    -ms-transform: scaleX(0);
-    transform: scaleX(0);
-    pointer-events: none;
-    -webkit-transition: -webkit-transform .6s ease;
-    transition: transform .6s ease;
+  content: ' ';
+  display: block;
+  width: 100%;
+  height: .1em;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, rgb(86, 164, 155) 50%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(86, 164, 155) 50%, rgba(255, 255, 255, 0) 100%);
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
+  pointer-events: none;
+  -webkit-transition: -webkit-transform .6s ease;
+  transition: transform .6s ease;
 }
 .a:hover::after {
-    -webkit-transform: scaleX(1);
-    -ms-transform: scaleX(1);
-    transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1);
 }
 .a:hover svg, .a:hover span {
-    color: rgb(86, 164, 155);
-    transition: .3s .1s;
+  color: rgb(86, 164, 155);
+  transition: .3s .1s;
 }
 .aa::before {
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 3px;
-    background: #dbb200;
-    bottom: 0px;
-    right: 0px;
-    transition: height, width;
-    transition-delay: 0.5s, 1s;
-    transition-duration: 0.5s;
-    transform-style: linear;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #dbb200;
+  bottom: 0px;
+  right: 0px;
+  transition: height, width;
+  transition-delay: 0.5s, 1s;
+  transition-duration: 0.5s;
+  transform-style: linear;
 }
 .aa:hover::before {
-    transition-delay: 0s, 0.5s;
-    transition-property: width, height;
-    width: 3px;
-    height: 100%;
+  transition-delay: 0s, 0.5s;
+  transition-property: width, height;
+  width: 3px;
+  height: 100%;
 }
 .aa::after {
-    content: ' ';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    background: #d2f256;
-    transform: scaleX(0);
-    transition: 300ms;
-    transform-origin: right;
-    z-index: -1;
+  content: ' ';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background: #d2f256;
+  transform: scaleX(0);
+  transition: 300ms;
+  transform-origin: right;
+  z-index: -1;
 }
 .aa:hover::after {
-    transform: scale(1);
-    transition-delay: 1s;
+  transform: scale(1);
+  transition-delay: 1s;
 }
 .aa:hover svg {
-    transition-delay: 1s;
-    color: #db6e00 !important;
+  transition-delay: 1s;
+  color: #db6e00 !important;
 }
 .aa:hover span {
-    color: #444 !important;
-    transform: scale(1.15);
-    transition: .5s 1s;
+  color: #444 !important;
+  transform: scale(1.15);
+  transition: .5s 1s;
 }
 /*///////////////////////////////////////////////////////////*/
 @font-face {
-    font-family: 'myfont';
-    src: url("../fonts/IRANSans-web.ttf") format("truetype"), url("../fonts/IRANSans-web.eot") format("eot"), url("../fonts/IRANSans-web.woff") format("woff"), url("../fonts/IRANSans-web.woff2") format("woff2");
-    font-style: normal;
-    font-weight: normal;
+  font-family: 'myfont';
+  src: url("../fonts/IRANSans-web.ttf") format("truetype"), url("../fonts/IRANSans-web.eot") format("eot"), url("../fonts/IRANSans-web.woff") format("woff"), url("../fonts/IRANSans-web.woff2") format("woff2");
+  font-style: normal;
+  font-weight: normal;
 }
 @font-face {
-    font-family: 'myfont1';
-    src: url('../fonts/BYekan.eot') format('eot'), url('../fonts/BYekan.ttf') format('truetype'), url('../fonts/BYekan.woff') format('woff');
-    font-style: normal;
-    font-weight: normal;
+  font-family: 'myfont1';
+  src: url('../fonts/BYekan.eot') format('eot'), url('../fonts/BYekan.ttf') format('truetype'), url('../fonts/BYekan.woff') format('woff');
+  font-style: normal;
+  font-weight: normal;
 }
 @font-face {
-    font-family: 'myfont2';
-    src: url("../fonts/B.Shekari.ttf") format("truetype");
+  font-family: 'myfont2';
+  src: url("../fonts/B.Shekari.ttf") format("truetype");
 }
 /*///////////////////////////////////////////////////////////*/
 #header-index #nav {
-    -webkit-transition: .3s ease;
-    transition: .3s ease;
+  -webkit-transition: .3s ease;
+  transition: .3s ease;
 }
 .body {
-    -webkit-transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
-    transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
-    will-change: transform;
+  -webkit-transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
+  transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
+  will-change: transform;
 }
 #header-index #nav a {
-    color: #fff;
+  color: #fff;
 }
 #header-index #nav #burger {
-    outline: none;
+  outline: none;
 }
 #header-index #nav #burger span {
-    display: block;
-    width: 1.8em;
-    height: 0.2em;
-    background-color: #999;
-    margin-bottom: 4.1px;
-    -webkit-transition: all cubic-bezier(0, 0, 0, .5) .4s;
-    transition: all cubic-bezier(0, 0, 0, .5) .4s;
-    position: relative;
-    border-radius: 10px;
+  display: block;
+  width: 1.8em;
+  height: 0.2em;
+  background-color: #999;
+  margin-bottom: 4.1px;
+  -webkit-transition: all cubic-bezier(0, 0, 0, .5) .4s;
+  transition: all cubic-bezier(0, 0, 0, .5) .4s;
+  position: relative;
+  border-radius: 10px;
 }
 #header-index #nav #burger span:first-child,
 #header-index #nav #burger span:last-child {
-    background-color: #DB6E00;
+  background-color: #DB6E00;
 }
 #header-index #nav #burger span:nth-child(2),
 #header-index #nav #burger span:nth-child(3) {
-    background-color: #afdb00;
+  background-color: #afdb00;
 }
 #header-index #nav #burger.open span:nth-child(2),
 #header-index #nav #burger.open span:nth-child(3) {
-    width: 0;
-    opacity: 0;
-    background-color: #fff;
+  width: 0;
+  opacity: 0;
+  background-color: #fff;
 }
 #header-index #nav #burger.open span:nth-child(4) {
-    -webkit-transform: rotate(135deg);
-    -ms-transform: rotate(135deg);
-    transform: rotate(135deg);
-    top: -11px;
-    background-color: #DB6E00;
+  -webkit-transform: rotate(135deg);
+  -ms-transform: rotate(135deg);
+  transform: rotate(135deg);
+  top: -11px;
+  background-color: #DB6E00;
 }
 #header-index #nav #burger.open span:nth-child(1) {
-    -webkit-transform: rotate(-135deg);
-    -ms-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-    top: 11px;
-    background-color: #DB6E00;
+  -webkit-transform: rotate(-135deg);
+  -ms-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+  top: 11px;
+  background-color: #DB6E00;
 }
 /*///////////////////////////////////////////////////////////*/
 /*///////////////////////////////////////////////////////////*/
 #banner-big-bg {
-    position: relative;
-    width: 100%;
-    background: url("../image/banner-big-bg.jpg") no-repeat top center;
-    background-size: 100%;
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  background: url("../image/banner-big-bg.jpg") no-repeat top center;
+  background-size: 100%;
+  overflow: hidden;
 }
 #banner-big-bg .movieh [class*="layer"] {
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
 #banner-big-bg .movieh .movieh__card {
-    height: 100vh;
-    -webkit-transition: .3s ease-out;
-    transition: .3s ease-out;
+  height: 100vh;
+  -webkit-transition: .3s ease-out;
+  transition: .3s ease-out;
 }
 #banner-big-bg .movieh .movieh__card .layer-1 {
-    background: url(../image/plant-small.png) no-repeat;
-    background-size: 35%;
-    -webkit-transform: rotate(15deg) translate3d(53%, -10%, -30px);
-    transform: rotate(15deg) translate3d(53%, -10%, -30px);
+  background: url(../image/plant-small.png) no-repeat;
+  background-size: 35%;
+  -webkit-transform: rotate(15deg) translate3d(53%, -10%, -30px);
+  transform: rotate(15deg) translate3d(53%, -10%, -30px);
 }
 #banner-big-bg .movieh .movieh__card .layer-2 {
-    background: url(../image/banner-big.png) no-repeat top center;
-    background-size: 100%;
-    -webkit-transform: translateZ(100px);
-    transform: translateZ(100px);
+  background: url(../image/banner-big.png) no-repeat top center;
+  background-size: 100%;
+  -webkit-transform: translateZ(100px);
+  transform: translateZ(100px);
 }
 #banner-big-bg .movieh .movieh__card .layer-2::after {
-    content: " ";
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: block;
+  content: " ";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: block;
 }
 #banner-big-bg .movieh .movieh__card .layer-3 {
-    -webkit-transform: translate3d(0px, 0px, 250px);
-    transform: translate3d(0px, 0px, 250px);
+  -webkit-transform: translate3d(0px, 0px, 250px);
+  transform: translate3d(0px, 0px, 250px);
 }
 #banner-big-bg .movieh .movieh__card .layer-3 .webzad {
-    font-size: 6em;
+  font-size: 6em;
 }
 #banner-big-bg .movieh .movieh__card .layer-3 span {
-    font-size: 2em;
+  font-size: 2em;
 }
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 {
-    transform: translate(-46%);
+  transform: translate(-46%);
 }
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
-    height: 8em;
+  height: 8em;
 }
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img:nth-of-type(2) {
-    transform: translate(1.5em);
+  transform: translate(1.5em);
 }
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img:nth-of-type(3) {
-    transform: translate(-1.5em);
+  transform: translate(-1.5em);
 }
 /*///////////////////////////////////////////////////////////*/
 #labkhand {
-    width: 100%;
-    background: black url("../image/gentleman.jpg") no-repeat right;
-    background-size: contain;
+  width: 100%;
+  background: black url("../image/gentleman.jpg") no-repeat right;
+  background-size: contain;
 }
 /*///////////////////////////////////////////////////////////*/
 #darkhast .bg-info-monhani {
-    background: url("../image/line-info.png") no-repeat bottom;
-    background-size: 100%;
-    height: 50px;
+  background: url("../image/line-info.png") no-repeat bottom;
+  background-size: 100%;
+  height: 50px;
 }
 /*///////////////////////////////////////////////////////////*/
 #khadamat .separator hr {
-    width: 250px;
-    display: inline-block;
-    margin: 0 40px;
+  width: 250px;
+  display: inline-block;
+  margin: 0 40px;
 }
 #khadamat .separator svg {
-    margin-top: -7px;
+  margin-top: -7px;
 }
 /*///////////////////////////////////////////////////////////*/
 
 #nemonekar #image_zoom img{
-    transition: 2.5s ease-out;
-    position: relative;
+  transition: 2.5s ease-out;
+  position: relative;
 }
 
 #nemonekar #image_zoom  img:hover{
-    transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 /*///////////////////////////////////////////////////////////*/
 #top {
-    position: fixed;
-    bottom: 8px;
-    right: 8px;
-    display: none;
-    cursor: pointer;
+  position: fixed;
+  bottom: 8px;
+  right: 8px;
+  display: none;
+  cursor: pointer;
 }
 #top svg {
-    border-radius: 50%;
-    width: 31px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+  border-radius: 50%;
+  width: 31px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
 #top:hover svg {
-    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 /*///////////////////////////////////////////////////////////*/
 
 #peshnahadeweje .flipTimer{
-      transform: scale(.4);
- 
+  transform: scale(.4);
+
 
 }
 #peshnahadeweje .flipTimer ,#peshnahadeweje .flipTimer div{
-    direction: ltr;
+  direction: ltr;
 
 
 }
 
+/*///////////////////////////////////////////////////////////*/
+.flip-box {
+  width: 150px;
+  height: 150px;
+  perspective: 1000px;
 
+}
 
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 50%;
+  overflow: hidden;
+  border: 1px solid #999;
+}
+
+.flip-box-front {
+  background-color:transparent;
+  color: #999;
+}
+
+.flip-box-back {
+  transform: rotateY(180deg);
+}
 
 
 /*///////////////////////////////////////////////////////////*/
 /*مانیتور های کوچیکتر از 992*/
 @media only screen and (max-width: 992px) {
-    #header-index {
-        position: static;
-    }
-    #header-index a {
-        color: #fff !important;
-    }
-    .menu li:hover {
-        transform: scale(1.02);
-        transition: .3s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-        will-change: transform;
-    }
-    .menu a {
-        opacity: 0;
-        transform: translate3d(48px, -48px, 0) scale(0);
-    }
-    body.open-nav .menu a {
-        opacity: 1;
-        transform: translate3d(-5px, -48px, 0) scale(1);
-    }
-    body.open-nav .menu li:nth-child(1) a {
-        transition: 1s .4s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    body.open-nav .menu li:nth-child(2) a {
-        transition: 1s .5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    body.open-nav .menu li:nth-child(3) a {
-        transition: 1s .6s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    body.open-nav .menu li:nth-child(4) a {
-        transition: 1s .7s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    body.open-nav .menu li:nth-child(5) a {
-        transition: 1s .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
-    }
-    #header-index #nav ul {
-        position: fixed;
-        -webkit-transform: translate(12em, 0);
-        -ms-transform: translate(12em, 0);
-        transform: translate(12em, 0);
-        width: 12em;
-        height: 100vh;
-        background: linear-gradient(to right, #434343 0%, black 100%), url("../image/mehrzad-1.png") no-repeat bottom right;
-        background-blend-mode: color-dodge;
-        z-index: 1;
-        overflow-x: hidden;
-        padding-top: 60px;
-    }
-    .open-nav {
-        -webkit-transform: translate(-12em, 0) !important;
-        -ms-transform: translate(-12em, 0) !important;
-        transform: translate(-12em, 0) !important;
-    }
-    #banner-big-bg .movieh .movieh__card .layer-3 .webzad {
-        font-size: 2em;
-    }
-    #banner-big-bg .movieh .movieh__card .layer-3 span {
-        font-size: .5em;
-    }
-    #banner-big-bg .movieh .movieh__card #typing {
-        font-size: .7em;
-    }
-    #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
-        height: 6em;
-    }
+  #header-index {
+    position: static;
+  }
+  #header-index a {
+    color: #fff !important;
+  }
+  .menu li:hover {
+    transform: scale(1.02);
+    transition: .3s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+    will-change: transform;
+  }
+  .menu a {
+    opacity: 0;
+    transform: translate3d(48px, -48px, 0) scale(0);
+  }
+  body.open-nav .menu a {
+    opacity: 1;
+    transform: translate3d(-5px, -48px, 0) scale(1);
+  }
+  body.open-nav .menu li:nth-child(1) a {
+    transition: 1s .4s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  }
+  body.open-nav .menu li:nth-child(2) a {
+    transition: 1s .5s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  }
+  body.open-nav .menu li:nth-child(3) a {
+    transition: 1s .6s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  }
+  body.open-nav .menu li:nth-child(4) a {
+    transition: 1s .7s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  }
+  body.open-nav .menu li:nth-child(5) a {
+    transition: 1s .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+  }
+  #header-index #nav ul {
+    position: fixed;
+    -webkit-transform: translate(12em, 0);
+    -ms-transform: translate(12em, 0);
+    transform: translate(12em, 0);
+    width: 12em;
+    height: 100vh;
+    background: linear-gradient(to right, #434343 0%, black 100%), url("../image/mehrzad-1.png") no-repeat bottom right;
+    background-blend-mode: color-dodge;
+    z-index: 1;
+    overflow-x: hidden;
+    padding-top: 60px;
+  }
+  .open-nav {
+    -webkit-transform: translate(-12em, 0) !important;
+    -ms-transform: translate(-12em, 0) !important;
+    transform: translate(-12em, 0) !important;
+  }
+  #banner-big-bg .movieh .movieh__card .layer-3 .webzad {
+    font-size: 2em;
+  }
+  #banner-big-bg .movieh .movieh__card .layer-3 span {
+    font-size: .5em;
+  }
+  #banner-big-bg .movieh .movieh__card #typing {
+    font-size: .7em;
+  }
+  #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
+    height: 6em;
+  }
 }
 /*مانیتور های کوچیکتر از 768*/
 @media only screen and (max-width: 767px) {
-    #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
-        height: 4.7em;
-    }
-    .font-small-md {
-        font-size: 1rem;
-    }
-    .max-width-lg {
-        max-width: 960px;
-    }
+  #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
+    height: 4.7em;
+  }
+  .font-small-md {
+    font-size: 1rem;
+  }
+  .max-width-lg {
+    max-width: 960px;
+  }
 }
 /*مانیتور های کوچیکتر از 576*/
 @media only screen and (max-width: 576px) {
-    .font-small-md {
-        font-size: .75rem;
-    }
+  .font-small-md {
+    font-size: .75rem;
+  }
 }
