--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,9 @@ body {
 .h-2 {
   height: 300px;
 }
+.cursor-pointer{
+  cursor: pointer;
+}
 /*///////////////////////////////////////////////////////////*/
 .will-change {
   will-change: transform;
@@ -335,27 +338,28 @@ body {
 }
 
 /*///////////////////////////////////////////////////////////*/
-.flip-box {
+#nemonekar .flip-box {
   width: 150px;
   height: 150px;
   perspective: 1000px;
 
 }
 
-.flip-box-inner {
+#nemonekar .flip-box-inner {
   position: relative;
   width: 100%;
   height: 100%;
   text-align: center;
   transition: transform 0.8s;
   transform-style: preserve-3d;
+
 }
 
-.flip-box:hover .flip-box-inner {
+#nemonekar .flip-box:hover .flip-box-inner {
   transform: rotateY(180deg);
 }
 
-.flip-box-front, .flip-box-back {
+#nemonekar .flip-box-front, .flip-box-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -365,12 +369,13 @@ body {
   border: 1px solid #999;
 }
 
-.flip-box-front {
+#nemonekar .flip-box-front {
   background-color:transparent;
   color: #999;
 }
 
-.flip-box-back {
+
+#nemonekar .flip-box-back {
   transform: rotateY(180deg);
 }
 
