--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,6 +60,9 @@ body {
 .cursor-pointer{
   cursor: pointer;
 }
+.display-none{
+  display: none;
+}
 /*///////////////////////////////////////////////////////////*/
 .will-change {
   will-change: transform;
@@ -100,8 +103,8 @@ body {
   content: '';
   position: absolute;
   width: 100%;
-  height: 3px;
-  background: #dbb200;
+  height: 1px;
+  background: #999;
   bottom: 0px;
   right: 0px;
   transition: height, width;
@@ -112,7 +115,7 @@ body {
 .aa:hover::before {
   transition-delay: 0s, 0.5s;
   transition-property: width, height;
-  width: 3px;
+  width: 1px;
   height: 100%;
 }
 .aa::after {
@@ -122,7 +125,7 @@ body {
   height: 100%;
   top: 0;
   right: 0;
-  background: #d2f256;
+  background: rgba(0, 0, 0, 0.03);
   transform: scaleX(0);
   transition: 300ms;
   transform-origin: right;
@@ -366,7 +369,6 @@ body {
   backface-visibility: hidden;
   border-radius: 50%;
   overflow: hidden;
-  border: 1px solid #999;
 }
 
 #nemonekar .flip-box-front {
