--- a/public/css/style.css
+++ b/public/css/style.css
@@ -88,7 +88,7 @@ body {
     vertical-align: middle;
     border-width: 0;
     border-radius: 0;
-    float: left;
+  
 }
 
 .blog-date .date:before {
@@ -673,6 +673,48 @@ body {
     border: 1px solid white;
 }
 /*///////////////////////////////////////////////////////////*/
+/*register  &   login..............................................................*/
+#register input {
+    border-radius: 10px;
+}
+
+#register .register {
+    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    border-radius: 25px;
+}
+
+#register .register:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transition-delay: 0.15s;
+}
+
+#register .login {
+    text-decoration: none;
+}
+
+#register .register {
+    text-decoration: none;
+}
+
+#register .login {
+    background-image: linear-gradient(to top, #7f6917 0%, #e2c56d 100%);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    border-radius: 25px;
+}
+
+#register .login:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transition-delay: 0.15s;
+}
+
+/*register   &   login..............................................................*/
+
+
+/*///////////////////////////////////////////////////////////*/
+
 /*مانیتور های کوچیکتر از 992*/
 @media only screen and (max-width: 992px) {
     #header-index {
