part user login session stat to profile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,15 +4,16 @@
     direction: rtl;
     text-align: right;
 }
-*,
-*::before,
-*::after {
+
+*, *::before, *::after {
     box-sizing: border-box;
 }
+
 ul * {
     margin: 0;
     padding: 0;
 }
+
 body {
     font-family: myfont;
     text-align: justify;
@@ -20,61 +21,86 @@ body {
     -webkit-transition: 0.5S cubic-bezier(.17, .84, .44, 1);
     transition: 0.5S cubic-bezier(.17, .84, .44, 1);
 }
+
 .overflow-hidden {
     overflow: hidden;
 }
+
 .opacity-5 {
     opacity: .5;
 }
+
 .opacity {
     opacity: 0;
 }
+
 .mt-6 {
     margin-top: 3.5rem;
 }
+
 .pr-8 {
     padding-right: 4rem;
 }
+
 .mr-10 {
     margin-right: 6rem !important;
 }
+
 .text-shadow {
     text-shadow: -1px 2px 4px #000;
     -webkit-transition: 0.15s;
     transition: 0.15s;
     font-family: myfont;
 }
+
 .text-shadow:hover {
     text-shadow: -1px 5px 7px #000000b3;
     position: relative;
     top: -1px;
 }
+
 .bg-gray {
     background-color: grey;
 }
+
 .h-2 {
     height: 300px;
 }
-.cursor-pointer{
+
+.cursor-pointer {
     cursor: pointer;
 }
-.display-none{
+
+.display-none {
     display: none;
 }
-.list-style-type-none{
+
+.list-style-type-none {
     list-style-type: none;
 }
-.line-height-2{
-    line-height:2em ;
+
+.line-height-2 {
+    line-height: 2em;
 }
-.line-height-3{
-    line-height:3em ;
+
+.line-height-3 {
+    line-height: 3em;
 }
+
+.border-radius {
+    border-radius: 50px !important;
+}
+
 /*///////////////////////////////////////////////////////////*/
+
 /***************************************************************************/
+
 /*  */
+
 /* Blog data */
+
 /*  */
+
 .blog-date .date {
     position: relative;
     z-index: 1;
@@ -88,7 +114,6 @@ body {
     vertical-align: middle;
     border-width: 0;
     border-radius: 0;
-  
 }
 
 .blog-date .date:before {
@@ -110,7 +135,7 @@ body {
     overflow: hidden;
 }
 
-.blog-date .date .date-cont > span {
+.blog-date .date .date-cont>span {
     text-align: center;
     display: block;
     min-width: 58px;
@@ -121,23 +146,22 @@ body {
     font-size: 24px;
 }
 
-.blog-date .date .date-cont > span.month,
-.blog-date .date .date-cont > span.year {
+.blog-date .date .date-cont>span.month, .blog-date .date .date-cont>span.year {
     font-size: 14px;
 }
 
-.blog-date .date .date-cont > span {
+.blog-date .date .date-cont>span {
     min-width: 55px;
 }
 
-.small .blog-date .date .date-cont > span {
+.small .blog-date .date .date-cont>span {
     min-width: 35px;
     height: 25px;
     line-height: 25px;
     font-size: 18px;
 }
 
-.small .blog-date .date .date-cont > span.month, .small .blog-date .date .date-cont > span.year {
+.small .blog-date .date .date-cont>span.month, .small .blog-date .date .date-cont>span.year {
     font-size: 14px;
 }
 
@@ -209,7 +233,7 @@ body {
     overflow: visible;
 }
 
-.blog-date .date .month > span {
+.blog-date .date .month>span {
     display: block;
     -webkit-transform: rotateX(0);
     -ms-transform: rotateX(0);
@@ -218,7 +242,7 @@ body {
     transition: all 0.3s ease;
 }
 
-.blog-date .date:hover .month > span {
+.blog-date .date:hover .month>span {
     -webkit-transform: rotateX(-180deg);
     -ms-transform: rotateX(-180deg);
     transform: rotateX(-180deg);
@@ -238,7 +262,6 @@ body {
     .col-md-4 .blog-item .blog-item-foot {
         text-align: center;
     }
-
     .col-md-4 .blog-item .blog-item-foot .cws-button {
         margin-top: 10px;
         float: none !important;
@@ -249,7 +272,6 @@ body {
     .blog-item .blog-item-foot {
         text-align: center;
     }
-
     .blog-item .blog-item-foot .cws-button {
         margin-top: 10px;
         float: none !important;
@@ -257,18 +279,23 @@ body {
 }
 
 /*  */
+
 /* Blockquote */
+
 /*  */
+
 /***************************************************************************/
 
 .will-change {
     will-change: transform;
 }
+
 .a {
     position: relative;
     color: #fff;
     text-decoration: none;
 }
+
 .a::after {
     content: ' ';
     display: block;
@@ -287,16 +314,19 @@ body {
     -webkit-transition: -webkit-transform .6s ease;
     transition: transform .6s ease;
 }
+
 .a:hover::after {
     -webkit-transform: scaleX(1);
     -ms-transform: scaleX(1);
     transform: scaleX(1);
 }
+
 .a:hover svg, .a:hover span {
     color: rgb(86, 164, 155);
     -webkit-transition: .3s .1s;
     transition: .3s .1s;
 }
+
 .aa::before {
     content: '';
     position: absolute;
@@ -312,6 +342,7 @@ body {
     -webkit-transition-duration: 0.5s;
     transition-duration: 0.5s;
 }
+
 .aa:hover::before {
     -webkit-transition-delay: 0s, 0.5s;
     transition-delay: 0s, 0.5s;
@@ -320,6 +351,7 @@ body {
     width: 1px;
     height: 100%;
 }
+
 .aa::after {
     content: ' ';
     position: absolute;
@@ -338,6 +370,7 @@ body {
     transform-origin: right;
     z-index: -1;
 }
+
 .aa:hover::after {
     -webkit-transform: scale(1);
     -ms-transform: scale(1);
@@ -345,11 +378,13 @@ body {
     -webkit-transition-delay: 1s;
     transition-delay: 1s;
 }
+
 .aa:hover svg {
     -webkit-transition-delay: 1s;
     transition-delay: 1s;
     color: #db6e00 !important;
 }
+
 .aa:hover span {
     color: #444 !important;
     -webkit-transform: scale(1.15);
@@ -358,73 +393,92 @@ body {
     -webkit-transition: .5s 1s;
     transition: .5s 1s;
 }
+
 /*///////////////////////////////////////////////////////////*/
-.font-small{
+
+.font-small {
     font-size: small;
 }
 
-.font-face1{
+.font-face1 {
     font-family: myfont1;
 }
-.font-face2{
+
+.font-face2 {
     font-family: myfont2;
 }
-.font-face3{
+
+.font-face3 {
     font-family: myfont3;
 }
+
 .font-sizs-20 {
     font-size: 2em;
 }
+
 .font-sizs-15 {
     font-size: 1.5em;
 }
+
 .font-sizs-12 {
     font-size: 1.2em;
 }
+
 .font-size-07 {
     font-size: 0.7em;
 }
+
 .font-size-05 {
     font-size: 0.5em;
 }
 
 /*///////////////////////////////////////////////////////////*/
+
 @font-face {
     font-family: 'myfont';
     src: url("../fonts/IRANSans-web.ttf") format("truetype"), url("../fonts/IRANSans-web.eot") format("eot"), url("../fonts/IRANSans-web.woff") format("woff"), url("../fonts/IRANSans-web.woff2") format("woff2");
     font-style: normal;
     font-weight: normal;
 }
+
 @font-face {
     font-family: 'myfont1';
     src: url('../fonts/BYekan.eot') format('eot'), url('../fonts/BYekan.ttf') format('truetype'), url('../fonts/BYekan.woff') format('woff');
     font-style: normal;
     font-weight: normal;
 }
+
 @font-face {
     font-family: 'myfont2';
     src: url("../fonts/B.Shekari.ttf") format("truetype");
 }
+
 @font-face {
     font-family: 'myfont3';
     src: url("../fonts/phalls_khodkar.ttf") format("truetype");
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 #header-index #nav {
     -webkit-transition: .3s ease;
     transition: .3s ease;
 }
+
 .body {
     -webkit-transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
     transition: 0.5s cubic-bezier(.22, .61, .36, 1) all;
     will-change: transform;
 }
+
 #header-index #nav a {
     color: #d8d8d8;
 }
+
 #header-index #nav #burger {
     outline: none;
 }
+
 #header-index #nav #burger span {
     display: block;
     width: 1.8em;
@@ -436,20 +490,21 @@ body {
     position: relative;
     border-radius: 10px;
 }
-#header-index #nav #burger span:first-child,
-#header-index #nav #burger span:last-child {
+
+#header-index #nav #burger span:first-child, #header-index #nav #burger span:last-child {
     background-color: #DB6E00;
 }
-#header-index #nav #burger span:nth-child(2),
-#header-index #nav #burger span:nth-child(3) {
+
+#header-index #nav #burger span:nth-child(2), #header-index #nav #burger span:nth-child(3) {
     background-color: #afdb00;
 }
-#header-index #nav #burger.open span:nth-child(2),
-#header-index #nav #burger.open span:nth-child(3) {
+
+#header-index #nav #burger.open span:nth-child(2), #header-index #nav #burger.open span:nth-child(3) {
     width: 0;
     opacity: 0;
     background-color: #fff;
 }
+
 #header-index #nav #burger.open span:nth-child(4) {
     -webkit-transform: rotate(135deg);
     -ms-transform: rotate(135deg);
@@ -457,6 +512,7 @@ body {
     top: -11px;
     background-color: #DB6E00;
 }
+
 #header-index #nav #burger.open span:nth-child(1) {
     -webkit-transform: rotate(-135deg);
     -ms-transform: rotate(-135deg);
@@ -464,8 +520,11 @@ body {
     top: 11px;
     background-color: #DB6E00;
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 /*///////////////////////////////////////////////////////////*/
+
 #banner-big-bg {
     position: relative;
     width: 100%;
@@ -473,6 +532,7 @@ body {
     background-size: 100%;
     overflow: hidden;
 }
+
 #banner-big-bg .movieh [class*="layer"] {
     position: absolute;
     left: 0;
@@ -480,23 +540,27 @@ body {
     right: 0;
     bottom: 0;
 }
+
 #banner-big-bg .movieh .movieh__card {
     height: 100vh;
     -webkit-transition: .3s ease-out;
     transition: .3s ease-out;
 }
+
 #banner-big-bg .movieh .movieh__card .layer-1 {
     background: url(../image/plant-small.png) no-repeat;
     background-size: 35%;
     -webkit-transform: rotate(15deg) translate3d(53%, -10%, -30px);
     transform: rotate(15deg) translate3d(53%, -10%, -30px);
 }
+
 #banner-big-bg .movieh .movieh__card .layer-2 {
     background: url(../image/banner-big.png) no-repeat top center;
     background-size: 100%;
     -webkit-transform: translateZ(100px);
     transform: translateZ(100px);
 }
+
 #banner-big-bg .movieh .movieh__card .layer-2::after {
     content: " ";
     width: 100%;
@@ -504,70 +568,86 @@ body {
     background-color: rgba(0, 0, 0, 0.3);
     display: block;
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 {
     -webkit-transform: translate3d(0px, 0px, 250px);
     transform: translate3d(0px, 0px, 250px);
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 .webzad {
     font-size: 6em;
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 span {
     font-size: 2em;
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 {
     -webkit-transform: translate(-46%);
     -ms-transform: translate(-46%);
     transform: translate(-46%);
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
     height: 8em;
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img:nth-of-type(2) {
     -webkit-transform: translate(1.5em);
     -ms-transform: translate(1.5em);
     transform: translate(1.5em);
 }
+
 #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img:nth-of-type(3) {
     -webkit-transform: translate(-1.5em);
     -ms-transform: translate(-1.5em);
     transform: translate(-1.5em);
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 #labkhand {
     width: 100%;
     background: black url("../image/gentleman.jpg") no-repeat right;
     background-size: contain;
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 #darkhast .bg-info-monhani {
     background: url("../image/line-info.png") no-repeat bottom;
     background-size: 100%;
     height: 50px;
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 #khadamat .separator hr {
     width: 250px;
     display: inline-block;
     margin: 0 40px;
 }
+
 #khadamat .separator svg {
     margin-top: -7px;
 }
+
 /*///////////////////////////////////////////////////////////*/
 
-#nemonekar #image_zoom img{
+#nemonekar #image_zoom img {
     -webkit-transition: 2.5s ease-out;
     transition: 2.5s ease-out;
     position: relative;
 }
 
-#nemonekar #image_zoom  img:hover{
+#nemonekar #image_zoom img:hover {
     -webkit-transform: scale(1.5);
     -ms-transform: scale(1.5);
     transform: scale(1.5);
 }
 
 /*///////////////////////////////////////////////////////////*/
+
 #top {
     position: fixed;
     bottom: 8px;
@@ -575,6 +655,7 @@ body {
     display: none;
     cursor: pointer;
 }
+
 #top svg {
     border-radius: 50%;
     width: 31px;
@@ -582,31 +663,30 @@ body {
     -webkit-transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
 }
+
 #top:hover svg {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
+
 /*///////////////////////////////////////////////////////////*/
 
-#peshnahadeweje .flipTimer{
+#peshnahadeweje .flipTimer {
     -webkit-transform: scale(.4);
     -ms-transform: scale(.4);
     transform: scale(.4);
-
-
 }
-#peshnahadeweje .flipTimer ,#peshnahadeweje .flipTimer div{
+
+#peshnahadeweje .flipTimer, #peshnahadeweje .flipTimer div {
     direction: ltr;
-
-
 }
 
 /*///////////////////////////////////////////////////////////*/
+
 #nemonekar .flip-box {
     width: 150px;
     height: 150px;
     -webkit-perspective: 1000px;
     perspective: 1000px;
-
 }
 
 #nemonekar .flip-box-inner {
@@ -618,7 +698,6 @@ body {
     transition: transform 0.8s;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-
 }
 
 #nemonekar .flip-box:hover .flip-box-inner {
@@ -637,17 +716,18 @@ body {
 }
 
 #nemonekar .flip-box-front {
-    background-color:transparent;
+    background-color: transparent;
     color: #999;
 }
-
 
 #nemonekar .flip-box-back {
     -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
+
 /*///////////////////////////////////////////////////////////*/
-#articles #widget-categories ul li a span::before{
+
+#articles #widget-categories ul li a span::before {
     content: '';
     position: absolute;
     right: 8px;
@@ -655,25 +735,77 @@ body {
     background-color: #DB6E00;
     border-radius: 50%;
     padding: 15px;
-
-
 }
-#articles #widget-categories ul li a span{
+
+#articles #widget-categories ul li a span {
     line-height: 30px;
     margin-left: 20px;
 }
 
 /*///////////////////////////////////////////////////////////*/
 
-#article .score li{
-    width:40px;
+#article .score li {
+    width: 40px;
     height: 10px;
     background-color: #eee;
     float: right;
     border: 1px solid white;
 }
+
 /*///////////////////////////////////////////////////////////*/
+
 /*register  &   login..............................................................*/
+
+.body_user {
+    height: 100vh;
+}
+
+.bg_user {
+    background: url(../image/home_sec.jpg) no-repeat fixed center;
+    background-size: cover;
+    opacity: .8;
+    display: block;
+    padding: 0;
+    margin: 0;
+    position: fixed;
+    width: 100%;
+}
+
+#nav-head .btn-right {
+    border-radius: 0px 25px 25px 0px;
+    line-height: 38px;
+    outline: 0;
+    cursor: pointer;
+}
+
+#nav-head .btn-left {
+    border-radius: 25px 0px 0px 25px;
+    line-height: 38px;
+    outline: 0;
+    cursor: pointer;
+}
+
+#nav-head span {
+    width: 38px;
+    height: 38px;
+    background: #fff;
+    border-radius: 50%;
+    transform: translatex(50%);
+    right: 50%;
+}
+
+.active_user {
+    background: linear-gradient(to bottom, rgb(255, 60, 11) 0%, rgb(204, 0, 0) 50%, rgb(255, 51, 0) 100%) !important;
+}
+
+.secondary_user {
+    background: linear-gradient(to bottom, rgba(111, 121, 128, 1) 0%, rgba(168, 168, 168, 1) 50%, rgba(111, 121, 128, 1) 100%);
+}
+
+#register {
+    height: 1000px;
+}
+
 #register input {
     border-radius: 10px;
 }
@@ -710,12 +842,24 @@ body {
     transition-delay: 0.15s;
 }
 
-/*register   &   login..............................................................*/
+#register .btn-user {
+    background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
+    border-radius: 25px;
+}
 
+#register .btn-user:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transition-delay: 0.15s;
+}
+
+/*register   &   login..............................................................*/
 
 /*///////////////////////////////////////////////////////////*/
 
 /*مانیتور های کوچیکتر از 992*/
+
 @media only screen and (max-width: 992px) {
     #header-index {
         position: static;
@@ -761,6 +905,10 @@ body {
         -webkit-transition: 1s .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
         transition: 1s .8s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
     }
+    body.open-nav .menu li:nth-child(6) a {
+        -webkit-transition: 1s .9s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+        transition: 1s .9s cubic-bezier(0.175, 0.885, 0.32, 1.275) all;
+    }
     #header-index #nav ul {
         position: fixed;
         -webkit-transform: translate(12em, 0);
@@ -793,7 +941,9 @@ body {
         height: 6em;
     }
 }
+
 /*مانیتور های کوچیکتر از 768*/
+
 @media only screen and (max-width: 767px) {
     #banner-big-bg .movieh .movieh__card .layer-3 #logo-layer3 img {
         height: 4.7em;
@@ -805,7 +955,9 @@ body {
         max-width: 960px;
     }
 }
+
 /*مانیتور های کوچیکتر از 576*/
+
 @media only screen and (max-width: 576px) {
     .font-small-md {
         font-size: .75rem;
